klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/association/ForeignKeyMultiplicityErrorTest.klass
package dummy

class DummyOwner
{
    id: Long key;
}

class DummyOwned
{
    id: Long key;
    ownerId: Long? private;
}

association OwnedHasOwner
{
    owner: DummyOwner[1..1];
    owned: DummyOwned[0..*] owned;

    relationship this.id == DummyOwned.ownerId
 }

association ForeignKeyMultiplicityOK
{
    parent: DummyParent[0..1];
    children: DummyChild[0..*];

    relationship this.id == DummyChild.parentId
}

class DummyParent
{
    id: Long key;
}

class DummyChild
{
    id: Long key;
    parentId: Long private;
}
